Updated Button Transitions

--- a/Menu Screen/index.html
+++ b/Menu Screen/index.html
@@ -10,6 +10,7 @@
   <body>
     <script src="sketch.js"></script>
     <script src="letter_tracing.js"></script>
+    <script src="typing_.js"></script>
     
   </body>
 </html>
