Finalized Button Changes

--- a/Menu Screen/index.html
+++ b/Menu Screen/index.html
@@ -11,6 +11,7 @@
     <script src="sketch.js"></script>
     <script src="letter_tracing.js"></script>
     <script src="typing_.js"></script>
+    <script src="penny_pinch.js"></script>
     
   </body>
 </html>
