typing: include words in index, we now track points

--- a/typing/index.html
+++ b/typing/index.html
@@ -13,6 +13,7 @@
 		<script>
 		speech_init();
 		</script>
+		<script src="words.js"></script>
 		<script src="sketch.js"></script>
 	</body>
 </html>
