--- a/letter-tracing/index.html
+++ b/letter-tracing/index.html
@@ -10,5 +10,9 @@
   </head>
   <body>
     <script src="sketch.js"></script>
+    <script src="TracingLevel.js"></script>
+    <script src="ellipse.js"></script>
+    <script src="hitbox.js"></script>
+    <script src="letter.js"></script>
   </body>
 </html>
