changed html files to match

--- a/Menu Screen/menu.html
+++ b/Menu Screen/menu.html
@@ -8,7 +8,7 @@
 
   </head>
   <body>
-    <script src="sketch.js"></script>
+    <script src="menu.js"></script>
     <script src="letter_tracing.js"></script>
     <script src="typing_.js"></script>
     <script src="penny_pinch.js"></script>
