--- a/typing/typing.html
+++ b/typing/typing.html
@@ -13,6 +13,6 @@
 		<script>
 		speech_init();
 		</script>
-		<script src="sketch.js"></script>
+		<script src="typing.js"></script>
 	</body>
 </html>
