--- a/letter-tracing/index.html
+++ b/letter-tracing/index.html
@@ -11,7 +11,7 @@
   <body>
     <script src="sketch.js"></script>
     <script src="TracingLevel.js"></script>
-    <script src="ellipse.js"></script>
+    <script src="circle.js"></script>
     <script src="hitbox.js"></script>
     <script src="letter.js"></script>
   </body>
