--- a/typing/index.html
+++ b/typing/index.html
@@ -9,7 +9,8 @@
 	</head>
 
 	<body>
-		<script src="../include/speech.js"></script>
+		<script src="p5.sound.js"></script>
+		<script src="speech.js"></script>
 		<script>
 		speech_init();
 		</script>
