--- a/Clean Version/menu.html
+++ b/Clean Version/menu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Typing Exercise</title>
+		<title>FMS</title>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<meta charset="utf-8" />
