--- a/letter-tracing/index.html
+++ b/letter-tracing/index.html
@@ -10,9 +10,6 @@
   </head>
   <body>
     <script src="sketch.js"></script>
-    <script src="TracingLevel.js"></script>
-    <script src="circle.js"></script>
-    <script src="hitbox.js"></script>
-    <script src="letter.js"></script>
+    <script src="chooseLetter.js"></script>
   </body>
 </html>
