--- a/Clean Version/tracing.html
+++ b/Clean Version/tracing.html
@@ -11,6 +11,7 @@
   <body>
     <script src="tracing.js"></script>
     <script src="chooseLetter.js"></script>
+    <script src="p5.sound.js"></script>
     
   </body>
 </html>
